<resources>
    <string name="app_name">外卖订餐系统</string>
    <string name="order_dish">点菜</string>
    <string name="check_order">查看订单</string>
    <string name="login_register">登录/注册</string>
    <string name="system_help">系统帮助</string>

    <string name="login_name_label">登录名</string>
    <string name="login_passwd_label">登录密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_back">返回</string>

    <string name="return_dish">退点</string>

    <string name="ordered_dish">已点菜品</string>
    <string name="call_service">呼叫服务</string>

    <string name="dishes_num">菜品总数：%1$d</string>
    <string name="dishes_sum_price">订单总价：%1$.1f元</string>
    <string name="price">%1$.1f元</string>

    <string name="dish_note">备注</string>
    <string name="start_real_update">启动实时更新</string>
    <string name="stop_real_update">停止实时更新</string>

    <string name="notification">新品上架：菜品数量:%1$d</string>
</resources>
